Fixed user landing calendar chart having too much padding

--- a/app/styles/user-landing.scss
+++ b/app/styles/user-landing.scss
@@ -56,12 +56,12 @@
 
   .user-landing-watch-history-chart {
     width: 100%;
-    height: 100%;
+    height: 16rem;
   }
 
   .user-landing-stats-calendar-chart {
     width: 100%;
-    height: 100%;
+    height: 16rem;
   }
 
   .user-landing-body-container {
